--- a/task_laravel/composer.json
+++ b/task_laravel/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravelcollective/html": "5.2.*"
+        "laravelcollective/html": "5.2.*",
+        "intervention/image": "2.*",
+        "barryvdh/laravel-debugbar": "@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
