--- a/task_laravel/composer.json
+++ b/task_laravel/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "5.2.*",
         "intervention/image": "dev-master",
-        "barryvdh/laravel-debugbar": "@dev"
+        "barryvdh/laravel-debugbar": "@dev",
+        "guzzlehttp/guzzle": "~4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
