--- a/task_laravel/composer.json
+++ b/task_laravel/composer.json
@@ -11,7 +11,8 @@
         "intervention/image": "dev-master",
         "barryvdh/laravel-debugbar": "@dev",
         "guzzlehttp/guzzle": "~4.0",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "laravelcollective/bus": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
